GS-11705 SALES: Add "Colleges" to the top navigation - correct alignment of contentGS on perl pages for IE7.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -4304,7 +4304,7 @@ body.cobranded #pageGS {
 -------------------------------------------------------------------------------------------*/
 
 #navbar {
-    background: url(/res/img/gs_content_bg.png) repeat-y;
+    background:transparent url(/res/img/gs_content_bg.png) repeat-y scroll 0 0;
     position:relative;
     padding:0;
     margin:0;
